--- a/NN_lab.ipynb
+++ b/NN_lab.ipynb
@@ -26,9 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All modules imported.\n"
+     ]
+    }
+   ],
    "source": [
     "import hashlib\n",
     "import os\n",
@@ -55,9 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading notMNIST_train.zip...\n",
+      "Download Finished\n",
+      "Downloading notMNIST_test.zip...\n",
+      "Download Finished\n",
+      "All files downloaded.\n"
+     ]
+    }
+   ],
    "source": [
     "def download(url, file):\n",
     "    \"\"\"\n",
@@ -86,9 +106,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 210001/210001 [00:36<00:00, 5727.36files/s]\n",
+      "100%|██████████| 10001/10001 [00:01<00:00, 6102.79files/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All features and labels uncompressed.\n"
+     ]
+    }
+   ],
    "source": [
     "def uncompress_features_labels(file):\n",
     "    \"\"\"\n",
@@ -158,9 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Problem 1 - Implement Min-Max scaling for grayscale image data\n",
     "def normalize_grayscale(image_data):\n",
@@ -170,6 +214,15 @@
     "    :return: Normalized image data\n",
     "    \"\"\"\n",
     "    # TODO: Implement Min-Max scaling for grayscale image data\n",
+    "    output = []\n",
+    "    a = 0.1\n",
+    "    b = 0.9\n",
+    "    Xmin = 0\n",
+    "    Xmax = 255\n",
+    "    for i in range(len(image_data)):\n",
+    "        data_n = a + (image_data[i] - Xmin) * (b - a) / (Xmax - Xmin)\n",
+    "        output.append(data_n)\n",
+    "    return output\n",
     "\n",
     "\n",
     "### DON'T MODIFY ANYTHING BELOW ###\n",
@@ -195,7 +248,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if not is_labels_encod:\n",
@@ -216,7 +271,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "assert is_features_normal, 'You skipped the step to normalize the features'\n",
@@ -235,7 +292,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Save the data for easy access\n",
@@ -272,7 +331,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -326,7 +387,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "features_count = 784\n",
@@ -399,7 +462,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Determine if the predictions are correct\n",
@@ -458,7 +523,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Find the best parameters for each configuration\n",
@@ -547,7 +614,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Set the epochs, batch_size, and learning_rate with the best parameters from problem 3\n",
@@ -615,7 +684,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
